# monster-lunch

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp  mlbuild  requirements.txt
res/: debug.glsl  view.glsl  view.vert
res/images/: main.json  tp-project.tps
src/: main.cpp
src/core/: CameraMovementSystem.cpp  CameraMovementSystem.hpp  GLFWApplication.cpp  GLFWApplication.hpp  SDLApplication.cpp  SDLApplication.hpp  SDLApplicationConfiguration.hpp
src/debug/: ImGuiDebugView.cpp  ImGuiDebugView.hpp
src/editor/: LevelEditorView.cpp  LevelEditorView.hpp  MLEditorState.cpp  MLEditorState.hpp
src/glfw/: glfw.hpp
src/input/: SDLInputManager.cpp  SDLInputManager.hpp
src/level/: Level.cpp  Level.hpp  LevelSystem.cpp  LevelSystem.hpp  Tile.cpp  Tile.hpp  TileCoordinate.hpp  TileLayer.cpp  TileLayer.hpp  TileLayerType.hpp
src/rendering/: GLFWRendererManager.cpp  GLFWRendererManager.hpp  SDLRendererManager.cpp  SDLRendererManager.hpp  Shapes.hpp  SokolFactory.cpp  SokolFactory.hpp  SokolRendererManager.cpp  SokolRendererManager.hpp  SokolState.hpp  ViewInstance.hpp  shapes.hpp  sokol.cpp  sokol.hpp
src/rendering/instance/: DebugLineInstance.hpp  ViewInstance.hpp
src/rendering/shader/: shader_view.h
src/sprite/: _gen_MainAtlas.hpp
src/utils/: SDL2Utils.hpp  SokolUtils.hpp
templates/: sprite_atlas_template.jinga
tool/: sgen
tool/templates/: sprite_atlas_template.jinga
